added new functions
